iai-callgrind/tests/ui/test_main_invalid_library_benchmark_groups.stderr
error[E0603]: function import `run` is private
 --> src/macros.rs
  |
  | ...                   $group::run(group_index, bench_index);
  |                               ^^^ private function import
  |
note: the function import `run` is defined here...
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:3:5
  |
3 |     #[library_benchmark]
  |     ^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the function `run` which is defined here
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `library_benchmark` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     expected struct `InternalMacroLibBench`, found tuple
  |     this expression has type `Option<&InternalMacroLibBench>`
  |
  = note: expected struct `InternalMacroLibBench`
              found tuple `(_, _, _)`
  = note: this error originates in the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0061]: this function takes 0 arguments but 2 arguments were supplied
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     supplied 2 arguments
  |     expected 0 arguments
  |
note: function defined here
 --> tests/ui/test_main_invalid_library_benchmark_groups.rs:6:5
  |
6 |     main!(library_benchmark_groups = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `InternalLibraryBenchmarkConfig: From<&str>` is not satisfied
  --> tests/ui/test_main_invalid_library_benchmark_groups.rs:19:5
   |
19 | /     main!(
20 | |         config = "some";
21 | |         library_benchmark_groups = my_group
22 | |     );
   | |_____^ the trait `From<&str>` is not implemented for `InternalLibraryBenchmarkConfig`
   |
   = help: the following implementations were found:
             <InternalLibraryBenchmarkConfig as From<&LibraryBenchmarkConfig>>
             <InternalLibraryBenchmarkConfig as From<&mut LibraryBenchmarkConfig>>
             <InternalLibraryBenchmarkConfig as From<LibraryBenchmarkConfig>>
   = note: required because of the requirements on the impl of `Into<InternalLibraryBenchmarkConfig>` for `&str`
   = note: this error originates in the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)
